--- a/app/docker/web/Dockerfile
+++ b/app/docker/web/Dockerfile
@@ -1,5 +1,7 @@
 FROM php:apache-bullseye
 
+COPY --from=composer:2.2 /usr/bin/composer /usr/bin/composer
+
 COPY php.ini /usr/local/etc/php/php.ini
 COPY init.sh /tmp/init.sh
 
